# rsgateway

./: Cargo.toml  README.md  query_packet.txt  response_packet.txt
.github/workflows/: release.yaml  test.yaml
archive/: Cargo.toml
archive/benches/: lz.rs
archive/src/: deflate.rs  huffman.rs  lz77.rs
benches/: dns.rs  encoding.rs  lz.rs
benches/testdata/: les_miserables.txt
bitarray/: Cargo.toml
bitarray/src/: buffer.rs  decode.rs  encode.rs  lib.rs  primitives.rs  serialize.rs
bitarray_derive/: Cargo.toml
bitarray_derive/src/: decoder.rs  encoder.rs  lib.rs
cache/src/: lru.rs
dns/: Cargo.toml
dns/src/: buffer.rs  error.rs  packet.rs  question.rs  resolver.rs
dns2/: Cargo.toml
dns2/src/: error.rs  lib.rs  packet.rs  question.rs
encoding/: Cargo.toml
encoding/benches/: base64.rs  percent.rs
encoding/src/: base64.rs  error.rs  lib.rs  percent.rs
gateway/: Cargo.toml
gateway/src/: main.rs  proxy.rs  route.rs
http/: Cargo.toml
http/src/: builder.rs  client.rs  header.rs  lib.rs  method.rs  mimetype.rs  request.rs  response.rs  standard.rs  statuscode.rs  useragent.rs  version.rs
json/: Cargo.toml
json/benches/: parse.rs
json/src/: error.rs  lib.rs  parser.rs  serialize.rs
json_derive/: Cargo.toml
json_derive/src/: lib.rs
json_test/: Cargo.toml
net/: Cargo.toml  test.sh
protobuf/: Cargo.toml
redis/: Cargo.toml
rsgateway/: Cargo.toml
src/: encoding.rs  error.rs  header.rs  http.rs  lib.rs  main.rs  server.rs  url.rs  version.rs
tcp/: Cargo.toml
tests/: les_miserables_compressed
udp/: Cargo.toml
(+75 files in other folders)
