[package]
name = "rsgateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12.1"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
rstest = "0.19.0"

[[bench]]
name = "encoding"
harness = false